# radio-pulsar-nav

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  valgrind-out.txt
docs/: 1 Dependencies.md  2 TOA-Processing.md  2-Dependencies.md  3 Positioning-Plugin.md  Dependencies.md  TOA-Processing.md  TOA-Simulation.md  UTMSetup.md
radio_pulsar_nav/: __main__.py  antenna.py  config.py  constants.py  conversions.py  psrcat.py  test_observation.py  visualise.py
rpnav/: __main__.py  antenna.py  config.py  constants.py  conversions.py  pulsar.py  run.py  test_observation.py  visualise.py
rpnav/navigate/: absolute_navigation.py  delta_correction.py  gradient_descent.py  test_navigate.py  visualise.py
rpnav/navigation/: navigate.c  navigate.h
rpnav/observe/: antenna.py  observation.py  observatories.py  observer.py  pulsar.py  reference.py  test_observation.py  test_pulsar.py  visualise.py
rpnav/observe/inputs/: test_woodchester.py  vela_timing_woodchester.py
rpnav/simulate/: README.md  commands  finalOffsetResults.txt  gridSearch  psrcat.res  results.txt  sim.input  simulate.py  simulate.sh  test_simulate.py  visualise.py
rpnav/simulate/inputs/: msfd.input  msfd_est.input  navigate.input  navigate.par  navigate.tim  test.tim  (+56 more)
rpnav/timing/: __main__.py  observer.py  test_timing.py  timing.py  visualise.py
scripts/: ppos_run.sh  ppos_run_parkes_eval.sh  ppos_run_teval.sh
src/: antenna.py  catalog.py  config.py  psrcat.py  visualise.py
tmp/: test.c  test.h
(+79477 files in other folders)
